<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/bg_color">


    <TextView
        android:id="@+id/exitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_gradient"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/are_you_sure_you_want_to_exit"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/exitControles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <LinearLayout
        android:id="@+id/exitControles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitText">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exitNo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:elevation="6dp"
            android:text="@string/no"
            android:textColor="@color/black" />

        <View
            android:layout_width="70dp"
            android:layout_height="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exitYes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            app:backgroundTint="#E6C154" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>