<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".activities.WelcomeActivity">

    <ImageView
        android:id="@+id/img_gold"
        android:layout_width="0dp"
        android:layout_height="164dp"
        android:src="@drawable/welcome_gold_icon"
        app:layout_constraintBottom_toTopOf="@id/txt_appName"
        app:layout_constraintEnd_toEndOf="@+id/txt_lorem"
        app:layout_constraintStart_toStartOf="@+id/txt_lorem"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/txt_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_app_name"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito_bold"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/txt_lorem"
        app:layout_constraintEnd_toEndOf="@+id/txt_lorem"
        app:layout_constraintStart_toStartOf="@+id/txt_lorem"
        app:layout_constraintTop_toBottomOf="@+id/img_gold" />

    <TextView
        android:id="@+id/txt_lorem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:textAlignment="center"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/txt_welcome_lorem"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/card_feature"
        app:layout_constraintEnd_toEndOf="@+id/card_feature"
        app:layout_constraintStart_toStartOf="@+id/card_feature"
        app:layout_constraintTop_toBottomOf="@+id/txt_appName" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_feature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="#161616"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/gl_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_lorem"
        app:strokeColor="@android:color/transparent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/features"
                android:fontFamily="@font/nunito_regular"
                android:textColor="#efc444"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_regular"
                        android:text="@string/lorem_ipsum_is_a_1"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_regular"
                        android:text="@string/lorem_ipsum_is_a_2"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_regular"
                        android:text="@string/lorem_ipsum_is_a_3"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/circle_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_regular"
                        android:text="@string/lorem_ipsum_is_a_4"
                        android:textColor="@color/white" />
                </LinearLayout>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:backgroundTint="#efc444"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/framelayout_Ads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_h1" />


    <FrameLayout
        android:id="@+id/framelayout_Ads"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_continue"
        app:layout_constraintStart_toStartOf="@+id/btn_continue" />
</androidx.constraintlayout.widget.ConstraintLayout>
