<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".activities.SplashScreenActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/splash_gold_icon"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/splash_app_name"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:text="@string/txt_welcome_lorem"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <ImageView
        android:id="@+id/loading_bar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/gl_h1"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/start_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:backgroundTint="#efc444"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/txt_lorem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_h1"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_lorem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_regular"
        android:paddingStart="5dp"
        android:gravity="center"
        android:text="@string/splash_feature"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/framelayout_Ads"
        app:layout_constraintEnd_toEndOf="@id/btn_continue"
        app:layout_constraintStart_toStartOf="@+id/btn_continue"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

    <FrameLayout
        android:id="@+id/framelayout_Ads"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />


</androidx.constraintlayout.widget.ConstraintLayout>